--- a/site.yml
+++ b/site.yml
@@ -4,6 +4,7 @@
   gather_facts: yes
   become: yes
   roles:
+    - role: comfort
     - role: prereq
     - role: download
     - role: raspberrypi
