--- a/roles/tools/tasks/helm.yml
+++ b/roles/tools/tasks/helm.yml
@@ -6,7 +6,8 @@
     mode: 'u=rwx,go=rx'
     dest: '{{ helm_download_dir }}'
   tags:
-    - helm
+    - tools
+    - tools.helm
 
 - name: download sha256sum
   get_url:
@@ -17,14 +18,16 @@
     validate_certs: yes
     mode: 'u=rw,go=r'
   tags:
-    - helm
+    - tools
+    - tools.helm
 
 - name: read sha256sum
   slurp:
     src: '{{ helm_download_dir }}/{{ helm_redis_filename }}.sha256'
   register: helm_sha256sum
   tags:
-    - helm
+    - tools
+    - tools.helm
 
 - name: download Helm
   get_url:
@@ -36,7 +39,8 @@
     validate_certs: yes
     mode: 'u=rw,go=r'
   tags:
-    - helm
+    - tools
+    - tools.helm
 
 - name: check current version
   command: >
@@ -45,14 +49,16 @@
   failed_when: no
   changed_when: no
   tags:
-    - helm
+    - tools
+    - tools.helm
 
 - name: current version
   debug:
     msg: '{{ helm_current_version.stdout }}'
   when: helm_current_version.rc == 0
   tags:
-    - helm
+    - tools
+    - tools.helm
 
 - name: remove existing installation
   become: yes
@@ -63,7 +69,8 @@
     - helm_current_version.rc == 0
     - helm_current_version.stdout != ('v' + helm_version)
   tags:
-    - helm
+    - tools
+    - tools.helm
 
 - name: create the Helm installation dir
   become: yes
@@ -74,7 +81,8 @@
     mode: 'u=rwx,go=rx'
     dest: '{{ helm_install_dir }}'
   tags:
-    - helm
+    - tools
+    - tools.helm
 
 - name: install unarchive module dependencies (apt, yum, dnf, zypper)
   become: yes
@@ -86,7 +94,8 @@
     state: present
   when: ansible_pkg_mgr in ('apt', 'yum', 'dnf', 'zypper')
   tags:
-    - helm
+    - tools
+    - tools.helm
 
 - name: install Helm
   become: yes
@@ -101,7 +110,8 @@
     mode: 'o-w'
     creates: '{{ helm_install_dir }}/helm'
   tags:
-    - helm
+    - tools
+    - tools.helm
 
 - name: create helm link
   become: yes
@@ -113,4 +123,5 @@
     group: root
     mode: 'u=rwx,go=rx'
   tags:
-    - helm
+    - tools
+    - tools.helm
